# odp-embedded-services

./: Cargo.toml
.github/workflows/: check.yml
battery-service/: Cargo.toml
battery-service/src/: acpi.rs  context.rs  lib.rs  mock.rs  task.rs
cfu-service/: Cargo.toml
cfu-service/src/: buffer.rs  lib.rs  splitter.rs
cfu-service/src/basic/: test.rs
cfu-service/src/mocks/: customization.rs  mod.rs
debug-service/: Cargo.toml
embedded-service/: Cargo.toml
embedded-service/src/: bus_error.rs  comms.rs  event.rs  fmt.rs  fw_update.rs  lib.rs  sync.rs
embedded-service/src/cfu/: bridge.rs  component.rs  mod.rs
embedded-service/src/ecs/: mod.rs
embedded-service/src/ipc/: deferred.rs
embedded-service/src/oem/: mod.rs  vendor.rs
embedded-service/src/relay/: mod.rs
espi-service/: Cargo.toml
espi-service/src/: espi_service.rs  task.rs
examples/rt633/: Cargo.toml
examples/rt685s-evk/: Cargo.toml
examples/std/: Cargo.toml
examples/std/src/lib/type_c/: mock_controller.rs
fw-update-interface-mocks/: Cargo.toml
fw-update-interface-mocks/src/: basic.rs  lib.rs
fw-update-interface-test-mocks/: Cargo.toml
keyboard-service/src/: task.rs
platform-service/: Cargo.toml
power-policy/: Cargo.toml
power-policy-interface-test-mocks/: Cargo.toml
power-policy-interface-test-mocks/src/: charger.rs  psu.rs
power-policy-service/: Cargo.toml
power-policy-service/src/: charger.rs  config.rs  consumer.rs  lib.rs  provider.rs  psu.rs  task.rs
power-policy-service/tests/: consumer.rs  provider.rs  unconstrained.rs
power-policy/src/: lib.rs
supply-chain/: audits.toml
thermal-service/: Cargo.toml
thermal-service/src/: context.rs  fan.rs  lib.rs  mptf.rs  sensor.rs  task.rs
time-alarm-service/: Cargo.toml
time-alarm-service-messages/src/: acpi_timestamp.rs  lib.rs
time-alarm-service/src/: lib.rs  task.rs  timer.rs
time-alarm-service/tests/: tad_test.rs
type-c-interface-mocks/: Cargo.toml
type-c-interface-mocks/src/: lib.rs
type-c-interface-mocks/src/controller/: mod.rs  pd.rs  ucsi.rs
type-c-interface-mocks/src/port/: mod.rs
type-c-interface-mocks/tests/: connect_disconnect.rs
type-c-interface/src/: lib.rs
type-c-service/: Cargo.toml
type-c-service/src/: lib.rs  task.rs  wrapper.rs
type-c-service/tests/: power.rs
uart-service/src/: mctp.rs
(+117 files in other folders)
