[package]
name = "embedded-services-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", version = "0.6.0", features = [
    "log",
] }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "log",
    "std",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "task-arena-size-32768",
    "arch-std",
    "executor-thread",
    "log",
] }

embedded-usb-pd = { git = "https://github.com/OpenDevicePartnership/embedded-usb-pd" }
embedded-services = { path = "../../embedded-service", features = ["log"] }
power-policy-service = { path = "../../power-policy-service", features = [
    "log",
] }
type-c-service = { path = "../../type-c-service", features = ["log"] }

env_logger = "0.9.0"
log = "0.4.14"
static_cell = "2"

[[bin]]
name = "type-c-basic"
path = "src/bin/type_c/basic.rs"

[[bin]]
name = "type-c-service"
path = "src/bin/type_c/service.rs"
